WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231593
Scrolling thread animations need to commit layers on the scrolling thread
https://bugs.webkit.org/show_bug.cgi?id=231593
Summary
Scrolling thread animations need to commit layers on the scrolling thread
Simon Fraser (smfr)
Reported
2021-10-12 10:23:53 PDT
Scrolling thread animations need to commit layers on the scrolling thread
Attachments
Patch
(24.15 KB, patch)
2021-10-12 10:30 PDT
,
Simon Fraser (smfr)
thorton
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(24.18 KB, patch)
2021-10-12 12:15 PDT
,
Simon Fraser (smfr)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(24.15 KB, patch)
2021-10-12 13:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-10-12 10:30:41 PDT
Created
attachment 440955
[details]
Patch
Tim Horton
Comment 2
2021-10-12 11:06:58 PDT
Comment on
attachment 440955
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=440955&action=review
> Source/WebKit/ChangeLog:8 > + Scroll animations were running the scrolling thread (in that the timers were firing on that
"on"
> Source/WebKit/ChangeLog:9 > + thread), but the scrolling thread wasn't changing layer positons, so those animations
positons!
> Source/WebKit/ChangeLog:26 > + Scroll animations are still based on a 60Hz timer, but in future should be driven by > + displayDidRefresh() notifications.
Excitement!
Simon Fraser (smfr)
Comment 3
2021-10-12 12:15:04 PDT
Created
attachment 440967
[details]
Patch
Simon Fraser (smfr)
Comment 4
2021-10-12 13:04:32 PDT
Created
attachment 440973
[details]
Patch
Simon Fraser (smfr)
Comment 5
2021-10-12 13:58:23 PDT
https://trac.webkit.org/changeset/284022/webkit
Radar WebKit Bug Importer
Comment 6
2021-10-12 13:59:40 PDT
<
rdar://problem/84165163
>
Ryan Haddad
Comment 7
2021-10-12 15:44:58 PDT
Reverted
r284022
for reason: Caused tests to exit early due to an assertion failure Committed
r284049
(
242878@main
): <
https://commits.webkit.org/242878@main
>
Ryan Haddad
Comment 8
2021-10-12 15:47:56 PDT
(In reply to Ryan Haddad from
comment #7
)
> Reverted
r284022
for reason: > > Caused tests to exit early due to an assertion failure
ASSERTION FAILED: connectionInfo.fullSpeedUpdatesClientCount /Volumes/Data/worker/macOS-AppleSilicon-Big-Sur-Debug-Build-EWS/build/Source/WebKit/UIProcess/mac/DisplayLink.cpp(186) : void WebKit::DisplayLink::decrementFullSpeedRequestClientCount(IPC::Connection &)
https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Big-Sur-Debug-WK2-Tests-EWS/r440955-14272-rerun/results.html
Simon Fraser (smfr)
Comment 9
2021-10-12 17:15:15 PDT
Re-landed in
https://trac.webkit.org/changeset/284064/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug